resources/css/coffee-menu-styles.css
/* Universal Style */

html {
  font-size: 16px;
}

body {
  background-color: rgb(190, 190, 190);
  color: #333;
}

h1, h2, h3, h4, h5, h6 {
  font-family: 'Playfair Display';
}

p {
  font-family: 'Open Sans';
  display: inline-block;
  margin: 5px 0;
}

hr {
  border: 5px solid white;
}

/* Menu */

#menu {
  background-color: #333;
  width: 90%;
  max-width: 750px;
  margin: 0 auto;
}

#content {
  padding: 10px;
}

#menu-header {
  color: white;
  text-align: center;
  margin: 0 auto;
}

#logo {
  width: 100%;
  max-width: 200px;
  margin-top: -30px;
}

/* Content */

.menu-content {
  background-color: #e0e0e0;
}

.content-header {
  font-size: 2rem;
  text-align: center;
}

.drink, .price {
  font-size: 1.25rem;
}

.drink {
  text-align: left;
  padding-left: 10px;
  width: 89%;
}

.price {
  text-align: right;
  padding-right: 10px;
}

/* Footer */

#info {
  background-color: #e5e5e5;
  color: #333;
}

/* Media queries */

@media only screen and (max-width: 800px) {
  html {
    font-size: 12px;
  }
  #menu {
    width: 90%;
  }
  .drink {
    width: 84%;
  }
  #logo {
    width: 150px;
  }
}

